tests/baselines/reference/FunctionDeclaration11_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration11_es6.ts(1,10): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration11_es6.ts (1 errors) ====
    function * yield() {
             ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
    }